[gd_scene load_steps=71 format=3 uid="uid://d3hdve1decu6n"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_45wk2"]
[ext_resource type="Texture2D" uid="uid://n0nuaep8vq4h" path="res://Assets/generic_char_v0.2/png/purple/char_purple_1.png" id="2_jce60"]
[ext_resource type="Texture2D" uid="uid://capiubg74pwnu" path="res://Assets/generic_char_v0.2/png/Gord/gord_char_1.png" id="2_ncw1g"]
[ext_resource type="Texture2D" uid="uid://c533v0nrux4hg" path="res://Assets/kenney_pixel-platformer/Tilemap/tilemap_packed.png" id="4_cewfm"]
[ext_resource type="Texture2D" uid="uid://dkctjq2v6tdax" path="res://Assets/generic_char_v0.2/png/Gord/gord_char_2.png" id="4_fi44k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vruan"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2e5wr"]
atlas = ExtResource("2_ncw1g")
region = Rect2(0, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh37w"]
atlas = ExtResource("2_ncw1g")
region = Rect2(56, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykoj3"]
atlas = ExtResource("2_ncw1g")
region = Rect2(112, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_g62tc"]
atlas = ExtResource("2_ncw1g")
region = Rect2(168, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp2i8"]
atlas = ExtResource("2_ncw1g")
region = Rect2(224, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_es7dk"]
atlas = ExtResource("2_ncw1g")
region = Rect2(280, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52gu"]
atlas = ExtResource("2_jce60")
region = Rect2(0, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg7tm"]
atlas = ExtResource("2_jce60")
region = Rect2(56, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8cvr"]
atlas = ExtResource("2_jce60")
region = Rect2(112, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1j57"]
atlas = ExtResource("2_jce60")
region = Rect2(168, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ulq"]
atlas = ExtResource("2_jce60")
region = Rect2(224, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpw5p"]
atlas = ExtResource("2_jce60")
region = Rect2(280, 504, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_8inbr"]
atlas = ExtResource("2_ncw1g")
region = Rect2(168, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_18g5d"]
atlas = ExtResource("2_ncw1g")
region = Rect2(336, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_fffib"]
atlas = ExtResource("2_ncw1g")
region = Rect2(392, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_r41q3"]
atlas = ExtResource("2_ncw1g")
region = Rect2(0, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw02j"]
atlas = ExtResource("2_ncw1g")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_io1qc"]
atlas = ExtResource("2_ncw1g")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_yal36"]
atlas = ExtResource("2_ncw1g")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwera"]
atlas = ExtResource("2_ncw1g")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcinn"]
atlas = ExtResource("2_ncw1g")
region = Rect2(224, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_tac36"]
atlas = ExtResource("2_ncw1g")
region = Rect2(280, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qvs5"]
atlas = ExtResource("2_ncw1g")
region = Rect2(0, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_bglsh"]
atlas = ExtResource("2_ncw1g")
region = Rect2(56, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpv1n"]
atlas = ExtResource("2_ncw1g")
region = Rect2(112, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ryn"]
atlas = ExtResource("2_ncw1g")
region = Rect2(280, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_uim2t"]
atlas = ExtResource("2_ncw1g")
region = Rect2(336, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpw8w"]
atlas = ExtResource("2_ncw1g")
region = Rect2(392, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj0vc"]
atlas = ExtResource("2_ncw1g")
region = Rect2(112, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1k5u"]
atlas = ExtResource("2_ncw1g")
region = Rect2(280, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng1js"]
atlas = ExtResource("2_ncw1g")
region = Rect2(336, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_m51du"]
atlas = ExtResource("2_ncw1g")
region = Rect2(392, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcx5k"]
atlas = ExtResource("2_ncw1g")
region = Rect2(0, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5yrb"]
atlas = ExtResource("2_ncw1g")
region = Rect2(56, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bpxa"]
atlas = ExtResource("2_ncw1g")
region = Rect2(112, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p510e"]
atlas = ExtResource("2_ncw1g")
region = Rect2(168, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsjyy"]
atlas = ExtResource("2_ncw1g")
region = Rect2(224, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_itbmn"]
atlas = ExtResource("2_ncw1g")
region = Rect2(280, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0017"]
atlas = ExtResource("2_ncw1g")
region = Rect2(336, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3dwf"]
atlas = ExtResource("2_ncw1g")
region = Rect2(392, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_q644h"]
atlas = ExtResource("4_fi44k")
region = Rect2(0, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rerbc"]
atlas = ExtResource("4_fi44k")
region = Rect2(56, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_liyi6"]
atlas = ExtResource("4_fi44k")
region = Rect2(112, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1cwj"]
atlas = ExtResource("4_fi44k")
region = Rect2(168, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_h06iq"]
atlas = ExtResource("4_fi44k")
region = Rect2(224, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s7fx"]
atlas = ExtResource("4_fi44k")
region = Rect2(280, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_73hwj"]
atlas = ExtResource("4_fi44k")
region = Rect2(336, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae05s"]
atlas = ExtResource("4_fi44k")
region = Rect2(392, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwpm7"]
atlas = ExtResource("4_fi44k")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_36nh7"]
atlas = ExtResource("4_fi44k")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndde1"]
atlas = ExtResource("4_fi44k")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4ij0"]
atlas = ExtResource("4_fi44k")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_mev5l"]
atlas = ExtResource("4_fi44k")
region = Rect2(224, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq7oy"]
atlas = ExtResource("4_fi44k")
region = Rect2(280, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_on7sv"]
atlas = ExtResource("4_fi44k")
region = Rect2(336, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_br74y"]
atlas = ExtResource("4_fi44k")
region = Rect2(392, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g8rx"]
atlas = ExtResource("4_fi44k")
region = Rect2(0, 56, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmlyv"]
atlas = ExtResource("4_fi44k")
region = Rect2(56, 56, 56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_4yqe8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e5wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh37w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykoj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g62tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp2i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es7dk")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg7tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8cvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1j57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ulq")
}, {
"duration": 1000.0,
"texture": SubResource("AtlasTexture_rpw5p")
}],
"loop": false,
"name": &"crouching",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8inbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18g5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fffib")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_r41q3")
}],
"loop": false,
"name": &"double_jumping",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw02j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io1qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yal36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwera")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcinn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tac36")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qvs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bglsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpv1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ryn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uim2t")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_gpw8w")
}],
"loop": false,
"name": &"jumping",
"speed": 12.0
}, {
"frames": [{
"duration": 0.75,
"texture": SubResource("AtlasTexture_sj0vc")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_t1k5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng1js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m51du")
}],
"loop": false,
"name": &"landing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcx5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5yrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bpxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p510e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsjyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itbmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0017")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3dwf")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q644h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rerbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liyi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1cwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h06iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s7fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73hwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae05s")
}],
"loop": true,
"name": &"running_attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwpm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36nh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndde1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4ij0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mev5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq7oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on7sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br74y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g8rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmlyv")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gdwcf"]
atlas = ExtResource("4_cewfm")
region = Rect2(288, 126, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_of5b1"]
atlas = ExtResource("4_cewfm")
region = Rect2(252, 126, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_umrlk"]
atlas = ExtResource("4_cewfm")
region = Rect2(188, 64, 2, 2)

[sub_resource type="SpriteFrames" id="SpriteFrames_ppk2a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of5b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umrlk")
}],
"loop": false,
"name": &"puff",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0oo7"]
size = Vector2(47, 22)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_45wk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vruan")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(2, -24)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_4yqe8")
animation = &"double_jumping"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="AnimatedSpritePuff" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(-2.333, 35)
sprite_frames = SubResource("SpriteFrames_ppk2a")
animation = &"puff"
frame = 3
frame_progress = 1.0

[node name="LandingRay1" type="RayCast2D" parent="."]
position = Vector2(-10, 10)
scale = Vector2(1.2, 1.2)
target_position = Vector2(0, 12)
collide_with_areas = true

[node name="LandingRay2" type="RayCast2D" parent="."]
position = Vector2(10, 10)
scale = Vector2(1.2, 1.2)
target_position = Vector2(0, 12)
collide_with_areas = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(34, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-24.5, 7)
shape = SubResource("RectangleShape2D_m0oo7")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
